nemu/.err
In file included from ./include/memory/memory.h:6,
                 from ./include/nemu.h:9,
                 from include/cpu/reg.h:4:
./include/memory/mmu/page.h:53:1: error: 'paddr_t' does not name a type
 paddr_t page_translate(laddr_t laddr);
 ^~~~~~~
./include/memory/mmu/page.h:54:1: error: 'paddr_t' does not name a type
 paddr_t page_walk(laddr_t laddr);
 ^~~~~~~
In file included from ./include/memory/memory.h:7,
                 from ./include/nemu.h:9,
                 from include/cpu/reg.h:4:
./include/memory/mmu/tlb.h:4:19: error: 'laddr_t' was not declared in this scope
 uint32_t tlb_read(laddr_t);
                   ^~~~~~~
In file included from ./include/nemu.h:9,
                 from include/cpu/reg.h:4:
./include/memory/memory.h:18:21: error: 'paddr_t' was not declared in this scope
 uint32_t paddr_read(paddr_t paddr, size_t len);
                     ^~~~~~~
./include/memory/memory.h:18:21: note: suggested alternative: 'paddr_read'
 uint32_t paddr_read(paddr_t paddr, size_t len);
                     ^~~~~~~
                     paddr_read
./include/memory/memory.h:18:43: error: expected primary-expression before 'len'
 uint32_t paddr_read(paddr_t paddr, size_t len);
                                           ^~~
./include/memory/memory.h:18:46: error: expression list treated as compound expression in initializer [-fpermissive]
 uint32_t paddr_read(paddr_t paddr, size_t len);
                                              ^
./include/memory/memory.h:21:18: error: variable or field 'paddr_write' declared void
 void paddr_write(paddr_t paddr, size_t len, uint32_t data);
                  ^~~~~~~
./include/memory/memory.h:21:18: error: 'paddr_t' was not declared in this scope
./include/memory/memory.h:21:18: note: suggested alternative: 'paddr_read'
 void paddr_write(paddr_t paddr, size_t len, uint32_t data);
                  ^~~~~~~
                  paddr_read
./include/memory/memory.h:21:40: error: expected primary-expression before 'len'
 void paddr_write(paddr_t paddr, size_t len, uint32_t data);
                                        ^~~
./include/memory/memory.h:21:54: error: expected primary-expression before 'data'
 void paddr_write(paddr_t paddr, size_t len, uint32_t data);
                                                      ^~~~
./include/memory/memory.h:24:21: error: 'laddr_t' was not declared in this scope
 uint32_t laddr_read(laddr_t laddr, size_t len);
                     ^~~~~~~
./include/memory/memory.h:24:21: note: suggested alternative: 'laddr_read'
 uint32_t laddr_read(laddr_t laddr, size_t len);
                     ^~~~~~~
                     laddr_read
./include/memory/memory.h:24:43: error: expected primary-expression before 'len'
 uint32_t laddr_read(laddr_t laddr, size_t len);
                                           ^~~
./include/memory/memory.h:24:46: error: expression list treated as compound expression in initializer [-fpermissive]
 uint32_t laddr_read(laddr_t laddr, size_t len);
                                              ^
./include/memory/memory.h:27:18: error: variable or field 'laddr_write' declared void
 void laddr_write(laddr_t laddr, size_t len, uint32_t data);
                  ^~~~~~~
./include/memory/memory.h:27:18: error: 'laddr_t' was not declared in this scope
./include/memory/memory.h:27:18: note: suggested alternative: 'laddr_read'
 void laddr_write(laddr_t laddr, size_t len, uint32_t data);
                  ^~~~~~~
                  laddr_read
./include/memory/memory.h:27:40: error: expected primary-expression before 'len'
 void laddr_write(laddr_t laddr, size_t len, uint32_t data);
                                        ^~~
./include/memory/memory.h:27:54: error: expected primary-expression before 'data'
 void laddr_write(laddr_t laddr, size_t len, uint32_t data);
                                                      ^~~~
./include/memory/memory.h:30:21: error: 'vaddr_t' was not declared in this scope
 uint32_t vaddr_read(vaddr_t vaddr, uint8_t sreg, size_t len);
                     ^~~~~~~
./include/memory/memory.h:30:21: note: suggested alternative: 'vaddr_read'
 uint32_t vaddr_read(vaddr_t vaddr, uint8_t sreg, size_t len);
                     ^~~~~~~
                     vaddr_read
./include/memory/memory.h:30:44: error: expected primary-expression before 'sreg'
 uint32_t vaddr_read(vaddr_t vaddr, uint8_t sreg, size_t len);
                                            ^~~~
./include/memory/memory.h:30:57: error: expected primary-expression before 'len'
 uint32_t vaddr_read(vaddr_t vaddr, uint8_t sreg, size_t len);
                                                         ^~~
./include/memory/memory.h:30:60: error: expression list treated as compound expression in initializer [-fpermissive]
 uint32_t vaddr_read(vaddr_t vaddr, uint8_t sreg, size_t len);
                                                            ^
./include/memory/memory.h:33:18: error: variable or field 'vaddr_write' declared void
 void vaddr_write(vaddr_t vaddr, uint8_t sreg, size_t len, uint32_t data);
                  ^~~~~~~
./include/memory/memory.h:33:18: error: 'vaddr_t' was not declared in this scope
./include/memory/memory.h:33:18: note: suggested alternative: 'vaddr_read'
 void vaddr_write(vaddr_t vaddr, uint8_t sreg, size_t len, uint32_t data);
                  ^~~~~~~
                  vaddr_read
./include/memory/memory.h:33:41: error: expected primary-expression before 'sreg'
 void vaddr_write(vaddr_t vaddr, uint8_t sreg, size_t len, uint32_t data);
                                         ^~~~
./include/memory/memory.h:33:54: error: expected primary-expression before 'len'
 void vaddr_write(vaddr_t vaddr, uint8_t sreg, size_t len, uint32_t data);
                                                      ^~~
./include/memory/memory.h:33:68: error: expected primary-expression before 'data'
 void vaddr_write(vaddr_t vaddr, uint8_t sreg, size_t len, uint32_t data);
                                                                    ^~~~
./include/memory/memory.h:39:22: error: 'vaddr_t' was not declared in this scope
 uint32_t instr_fetch(vaddr_t vaddr, size_t len);
                      ^~~~~~~
./include/memory/memory.h:39:22: note: suggested alternative: 'vaddr_read'
 uint32_t instr_fetch(vaddr_t vaddr, size_t len);
                      ^~~~~~~
                      vaddr_read
./include/memory/memory.h:39:44: error: expected primary-expression before 'len'
 uint32_t instr_fetch(vaddr_t vaddr, size_t len);
                                            ^~~
./include/memory/memory.h:39:47: error: expression list treated as compound expression in initializer [-fpermissive]
 uint32_t instr_fetch(vaddr_t vaddr, size_t len);
                                               ^
In file included from include/cpu/reg.h:4:
./include/nemu.h:22:17: error: redeclaration of C++ built-in type 'bool' [-fpermissive]
 typedef uint8_t bool;
                 ^~~~
./include/nemu.h: In function 'void memcpy_with_mask(void*, const void*, size_t, uint8_t*)':
./include/nemu.h:46:16: warning: comparison of integer expressions of different signedness: 'int' and 'size_t' {aka 'unsigned int'} [-Wsign-compare]
  for (i = 0; i < len; i++)
              ~~^~~~~
